--- a/cabal.project
+++ b/cabal.project
@@ -8,7 +8,7 @@ packages: language-ats
         , shake-c
 
 constraints:
-  ats-format +development -static -profile,
+  ats-format -development -static -profile,
   ats-pkg +development -eventlog -profile,
   shake-ext -development,
   language-ats +development,
