Use These from Data.These

--- a/cabal.project
+++ b/cabal.project
@@ -7,6 +7,9 @@ packages: language-ats
         , shake-cabal
         , shake-c
 
+allow-newer:
+  these-skinny:base
+
 constraints:
   ats-format -development -static -profile,
   ats-pkg +development -eventlog -profile,
