--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -89,7 +89,7 @@ library
         dependency >=1.2.0.0,
         quaalude -any,
         archive-sig >=1.0.1.0,
-        archive-libarchive,
+        archive-libarchive >=1.0.0.0,
         unix-compat -any
 
     mixins: archive-libarchive (Archive.FFI as Archive)
