--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -61,7 +61,7 @@ library
 
     ghc-options:      -Wall -O2
     build-depends:
-        base >=4.9 && <5,
+        base >=4.11 && <5,
         array -any,
         recursion >=2.2.3.0,
         microlens >=0.3.0.0,
@@ -106,7 +106,7 @@ benchmark language-ats-bench
     main-is:          Bench.hs
     hs-source-dirs:   bench
     default-language: Haskell2010
-    ghc-options:      -Wall -O2
+    ghc-options:      -Wall -O2 -rtsopts -with-rtsopts=-A9M
     build-depends:
         base -any,
         language-ats -any,
