--- a/shake-c/shake-c.cabal
+++ b/shake-c/shake-c.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.18
 name: shake-c
-version: 0.4.3.0
+version: 0.4.4.0
 license: BSD3
 license-file: LICENSE
-copyright: Copyright: (c) 2018-2019 Vanessa McHale
-maintainer: vanessa.mchale@iohk.io
+copyright: Copyright: (c) 2018-2020 Vanessa McHale
+maintainer: vamchale@gmail.com
 author: Vanessa McHale
 bug-reports: https://hub.darcs.net/vmchale/ats/issues
 synopsis: Library for building C code with shake
