--- a/shake-c/shake-c.cabal
+++ b/shake-c/shake-c.cabal
@@ -1,38 +1,39 @@
-cabal-version: 1.18
-name: shake-c
-version: 0.4.4.0
-license: BSD3
-license-file: LICENSE
-copyright: Copyright: (c) 2018-2020 Vanessa McHale
-maintainer: vamchale@gmail.com
-author: Vanessa McHale
-bug-reports: https://hub.darcs.net/vmchale/ats/issues
-synopsis: Library for building C code with shake
+cabal-version:   1.18
+name:            shake-c
+version:         0.4.5.0
+license:         BSD3
+license-file:    LICENSE
+copyright:       Copyright: (c) 2018-2020 Vanessa McHale
+maintainer:      vamchale@gmail.com
+author:          Vanessa McHale
+bug-reports:     https://hub.darcs.net/vmchale/ats/issues
+synopsis:        Library for building C code with shake
 description:
     Facilities for building C libraries and binaries, and depending on C source files. Extends [shake](http://hackage.haskell.org/package/shake).
-category: Development, C
-build-type: Simple
-extra-doc-files: README.md
-                 CHANGELOG.md
+
+category:        Development, C
+build-type:      Simple
+extra-doc-files:
+    README.md
+    CHANGELOG.md
 
 source-repository head
-    type: darcs
+    type:     darcs
     location: https://hub.darcs.net/vmchale/ats
 
 flag development
-    description:
-        Enable `-Werror`
-    default: False
-    manual: True
+    description: Enable `-Werror`
+    default:     False
+    manual:      True
 
 library
-    exposed-modules:
-        Development.Shake.C
-    hs-source-dirs: src
+    exposed-modules:  Development.Shake.C
+    hs-source-dirs:   src
     default-language: Haskell2010
-    other-extensions: DeriveAnyClass DeriveGeneric DeriveDataTypeable
-                      TypeFamilies
-    ghc-options: -Wall
+    other-extensions:
+        DeriveAnyClass DeriveGeneric DeriveDataTypeable TypeFamilies
+
+    ghc-options:      -Wall
     build-depends:
         base >=4.3 && <5,
         shake >=0.14,
@@ -43,8 +44,9 @@ library
         ghc-options: -Werror
 
     if impl(ghc >=8.0)
-        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
-                     -Wredundant-constraints -Wnoncanonical-monad-instances
+        ghc-options:
+            -Wincomplete-uni-patterns -Wincomplete-record-updates
+            -Wredundant-constraints -Wnoncanonical-monad-instances
 
     if impl(ghc >=8.4)
         ghc-options: -Wmissing-export-lists
