--- a/cabal.project
+++ b/cabal.project
@@ -17,7 +17,7 @@ constraints:
   hs2ats +development,
   shake-cabal -development,
   shake-c -development,
-  zlib +pkg-config,
+  zlib -pkg-config +bundled-c-zlib,
   libarchive +static
 
 executable-stripping: true
