--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -1,12 +1,12 @@
 cabal-version:      2.0
 name:               ats-pkg
-version:            3.5.0.1
+version:            3.5.0.2
 license:            BSD3
 license-file:       LICENSE
 copyright:          Copyright: (c) 2018-2020 Vanessa McHale
 maintainer:         vamchale@gmail.com
 author:             Vanessa McHale
-tested-with:        ghc ==8.4.4 ghc ==8.6.5 ghc ==8.8.2
+tested-with:        ghc ==8.4.4 ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.2
 bug-reports:        https://github.com/vmchale/atspkg/issues
 synopsis:           A build tool for ATS
 description:        A collection of scripts to simplify building ATS projects.
