--- a/shake-cabal/shake-cabal.cabal
+++ b/shake-cabal/shake-cabal.cabal
@@ -1,9 +1,9 @@
 cabal-version:   1.18
 name:            shake-cabal
-version:         0.2.2.1
+version:         0.2.2.2
 license:         BSD3
 license-file:    LICENSE
-copyright:       Copyright: (c) 2018-2019 Vanessa McHale
+copyright:       Copyright: (c) 2018-2019, 2021 Vanessa McHale
 maintainer:      vamchale@gmail.com
 author:          Vanessa McHale
 bug-reports:     https://github.com/vmchale/atspkg/issues
@@ -39,7 +39,7 @@ library
     build-depends:
         base >=4.8 && <5,
         shake >=0.18.4,
-        Cabal >=2.2,
+        Cabal >=3.6,
         directory -any,
         composition-prelude -any,
         filepath -any,
